--- a/Example-2/package.json
+++ b/Example-2/package.json
@@ -2,9 +2,9 @@
   "name": "example-2",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "test.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc test.ts && node test.js"
   },
   "author": "",
   "license": "ISC"
