--- a/Example-2/package.json
+++ b/Example-2/package.json
@@ -7,5 +7,8 @@
     "start": "tsc && node dist/app.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^20.12.11"
+  }
 }
